Actualizado con el ejercicio 3 y 4 de la tarea 3

--- a/html/index.html
+++ b/html/index.html
@@ -2,6 +2,14 @@
 <html>
 	<head>
 	<meta charset="utf-8" lang="es-ES">
+	<title>
+		Página de prueba Lorem Ipsum
+	</title>
+	<style>
+		a {text-decoration:none;
+		color:black;
+			}
+	</style>
 	</head>
 	<body>
 		<h1>
@@ -10,7 +18,7 @@
 		<ul>
 			<li>¿Qué es el Lorem Ipsum?</li>
 			<li>Plugin de VSCODE</li>
-			<li><a href="">Lorem Ipsum para imágenes</a></li>
+			<li><a href="" >Lorem Ipsum para imágenes</a></li>
 		</ul>
 		<h2>
 		El texto es
@@ -33,6 +41,13 @@ Torquent morbi neque nam nulla lacinia rhoncus vestibulum, natoque fusce a biben
 		<p>
 		¡No es un problema de espacio!
 		</p>
+		<article>
+		La página web picsum, nos permite obterner de forma sencilla imágenes para nuestra página web:
+		<p>
+		<img src="https://picsum.photos/500/500">
+		<p>
+		El enlace que nos da picsum nos permite mostrar imágenes aleatorias y nosotros le pasamos el tamaño de altura y ancho en la propia URL que insertamos en la etiqueta img.
+		</article>
 		<hr>
 		Entre a la zona de afiliados
 		<br>
