Subida de último código Oh Mummy!

--- a/Uncthuled/index.html
+++ b/Uncthuled/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es-ES">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,16 @@
     <style>
         @import url("uncthuled.css");
     </style>
-    <script src="main.js"></script>
+    <script src="main.js" type="MODULE"></script>
 </head>
+
 <body>
-    <div id="mapa"> 
+<div class="pantalla">
+    <div id="mapa">
 
     </div>
+</div>
+
 </body>
+
 </html>
