--- a/Uncthuled/index.html
+++ b/Uncthuled/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+    <audio src="./media/metal-gear-1987-full-ost.mp3" autoplay></audio>
         <script src="main.js" type="MODULE"></script>
 <div class="pantalla">
     <div id="mapa">
