Beta presentable, falta aspecto visual

--- a/Uncthuled/index.html
+++ b/Uncthuled/index.html
@@ -12,13 +12,22 @@
 </head>
 
 <body>
-    <audio src="./media/metal-gear-1987-full-ost.mp3" autoplay></audio>
-        <script src="main.js" type="MODULE"></script>
-<div class="pantalla">
-    <div id="mapa">
+    <audio src="./media/metal-gear-1987-full-ost.mp3" autoplay loop=true></audio>
 
+    <script src="main.js" type="MODULE"></script>
+
+    <div class="pantalla">
+            <div id="inventario">
+                    
+            </div>
+        <div class="mapa">
+        </div>
+        <div id="life">
+                <div>
+                        
+                </div>
+        </div>
     </div>
-</div>
 
 </body>
 
