--- a/NodeJS/DatosAbiertos/public/index.html
+++ b/NodeJS/DatosAbiertos/public/index.html
@@ -13,5 +13,8 @@
         <div class="main">¿Siempre ha querido freirse unas patatas con el aceite usado de toda la ciudad de València? ¡Use nuestro buscador!</div>
         <br>
         <input type="textbox" id="buscador"/>
+        <input type="button" id="buscar" value="Buscar"/>
+
+        <div class="resultados"></div>
     </body>
 </html>
