Final de la tarea
Tarea finalizada

--- a/NodeJS/DatosAbiertos/public/index.html
+++ b/NodeJS/DatosAbiertos/public/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <script type="module" src="main.js"></script>
-    <style>@import url(style.css);</style>
+    <title>Freidora intermunicipal</title>
+    <style>@import url('style.css');</style>
+    <script src="main.js"></script>
 </head>
     <body>
         <h1>Bienvenidos al buscador de contenedores de aceite</h1>
