Varias subidas de golpe, entre ellas el NodeJS y el nuevo proyecto de MongoFallero

--- a/NodeJS/MongoFallero/public/index.html
+++ b/NodeJS/MongoFallero/public/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="js/main.js"></script>
+    <style>@import url('style/style.css');</style>
 </head>
 <body>
-    
+    <div class="filtro"></div>
+    <input type="text" id="buscador">
+    <input type="button" id="buscar">
+    <div class="resultados"></div>
 </body>
 </html>
