--- a/NodeJS/MongoFallero/public/index.html
+++ b/NodeJS/MongoFallero/public/index.html
@@ -9,19 +9,22 @@
     <style>@import url('style/style.css');</style>
 </head>
 <body>
-    <div class="filtro"></div>
-    <div class="infPrin">
+    <div class="container">
+    <div class="filtro">
         <form>
-        <input type="radio" id="principal" name="tipoFalla" checked>
-        <label for="principal">Principal</label>
-        <input type="radio" id="infantil" name="tipoFalla">
-        <label for="infantil">Infantil</label>
-    </form>
-        Año de fundación:<br>
-             <input type="text" id="desde" placeholder="Desde"><br>
-             <input type="text" id="hasta" placeholder="Hasta"><br>
+            <input type="radio" id="principal" name="tipoFalla" checked>
+            <label for="principal">Principal</label>
+            <input type="radio" id="infantil" name="tipoFalla">
+            <label for="infantil">Infantil</label>
+        </form>
     </div>
-    <br>
+        
+        Año de fundación:<br>
+            
+        <input type="text" id="desde" placeholder="Desde"><br>
+        <input type="text" id="hasta" placeholder="Hasta"><br><br>
+
     <div class="resultados"></div>
+</div>
 </body>
 </html>
