Preparando el código para insertar en mongoDB, hay que añadir la IP (consultar apuntes), hacer la consulta y después el insert

--- a/NodeJS/MongoFallero/public/index.html
+++ b/NodeJS/MongoFallero/public/index.html
@@ -7,6 +7,7 @@
     <title>MongoFallero</title>
     <script src="js/main.js"></script>
     <style>@import url('style/style.css');</style>
+    <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getip"></script>
 </head>
 <body>
     <div class="container">
