--- a/NodeJS/MongoFallero/public/index.html
+++ b/NodeJS/MongoFallero/public/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MongoFallero</title>
+
+    
     <script src="js/main.js"></script>
+    <script type="text/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
     <style>@import url('style/style.css');</style>
-    <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getip"></script>
 </head>
 <body>
     <div class="container">
